# python-tesseron

./: .gitignore  .pre-commit-config.yaml  Insights.md  PROMPT_architecture_extraction.md  PROMPT_gateway_implementation.md  PROMPT_sdk_implementation.md  PROMPT_test_implementation.md  README.md  SPEC_tesseron_protocol_for_python.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_traceability.py  check_v_model_gaps.py
src/python_tesseron/: __init__.py  actions.py  cancellation.py  capabilities.py  context.py  dispatcher.py  elicitation.py  errors.py  handshake.py  manifest.py  resources.py  resume.py  sampling.py  session.py  tesseron.py  transport_uds.py  transport_ws.py  transport_ws_client.py  transport_ws_pyodide.py  types.py
src/python_tesseron/gateway/: __init__.py  action_router.py  elicitation_bridge.py  manifest_watcher.py  mcp_bridge.py  resume.py  sampling_bridge.py  server.py  session.py
tests/: __init__.py  conftest.py  test_acceptance.py  test_action_context.py  test_api.py  test_capabilities.py  test_error_model.py  test_gateway_action_router.py  test_gateway_elicitation.py  test_gateway_integration.py  test_gateway_manifest.py  test_gateway_mcp_bridge.py  test_gateway_resume.py  test_gateway_sampling.py  test_gateway_server.py  test_gateway_session.py  test_security.py  test_state_transitions.py  test_transport_pyodide.py  test_type_definitions.py  test_wire_format.py
traceability/: acceptance_to_requirements.csv  capability_tests.md  design_contracts.csv  error_model_tests.md  fulfilled_by.csv  gap_analysis.md  gateway_tests.md  requirements.csv  state_transition_tests.md  test_cases.csv  verified_by.csv  wire_format_tests.md
