[project]
name = "python-tesseron"
version = "0.1.0"
description = "Python implementation of the Tesseron protocol for typed action exposure to AI agents over MCP/WebSocket"
readme = "README.md"
authors = [
    { name = "Stuart Swerdloff", email = "sjswerdloff@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-json-report>=1.5",
    "ruff>=0.8",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "wire_format: Wire format (JSON-RPC 2.0 envelope and transport) tests",
    "state_transition: Session lifecycle state machine tests",
    "error_model: Error code and error class tests",
    "capability: Capability negotiation tests",
    "security: Security model tests",
    "acceptance: Acceptance scenario tests",
    "api: API surface tests",
]

[tool.ruff]
line-length = 127
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "D",   # pydocstyle
    "TRY", # tryceratops
    "PTH", # flake8-use-pathlib
    "N",   # pep8-naming
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at the second line (conflicts with D212)
    "ANN401", # Dynamically typed expressions (Any) -- needed for JSON types
    "TRY003", # Avoid specifying long messages outside the exception class -- we use custom exception classes
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN001", # Missing type annotation for function argument in tests
    "ANN002", # Missing type annotation for *args in tests
    "ANN003", # Missing type annotation for **kwargs in tests
    "ANN201", # Missing return type annotation for public function in tests
    "ANN202", # Missing return type annotation for private function in tests
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function -- tests use docstrings for traceability
    "S101",   # Use of assert detected -- expected in tests
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
